--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,51 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
   <title>Akyuna Akish</title>
+  <link rel='shortcut icon' href='/images/keenlydoneFavicon.ico' type='image/x-icon'/>
+  <base href="/">
 </head>
 <body>
 
-  <ng-view></ng-view>
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" ng-href="/">Akyuna Akish</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a ng-href="/projects">Projects</a>
+          </li>
+          <li>
+            <a ng-href="/resume">Resume</a>
+          </li>
+          <li>
+            <a ng-href="/contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <br><br><br>
+  <div class="container-fluid">
+    <ng-view></ng-view>
+  </div>
+
+
+
+
+
 
 
   <script src="/js/module.js"></script>
