--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <!-- AngularJS -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-animate.js"></script>
   <title>Akyuna Akish</title>
   <link rel='shortcut icon' href='/images/keenlydoneFavicon.ico' type='image/x-icon'/>
   <base href="/">
@@ -49,9 +50,9 @@
     </div>
     <!-- /.container -->
   </nav>
-  <br><br><br>
+
   <div class="container-fluid">
-    <ng-view></ng-view>
+    <ng-view class='page'></ng-view>
   </div>
 
 
