--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,17 @@
 <html lang="en" ng-app="personalWebsiteApp">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Pacifico|Indie+Flower|Open+Sans+Condensed:300|Cinzel' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link href="/stylesheets/freelancer.css" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- AngularJS -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
@@ -18,49 +23,52 @@
   <base href="/">
 </head>
 <body>
-
   <!-- Navigation -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+      <div class="navbar-header page-scroll">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ng-href="/">Akyuna Akish</a>
+        <a class="navbar-brand nameClass" href="#page-top">Akyuna Akish</a>
       </div>
+
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li>
-            <a ng-href="/projects">Projects</a>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="hidden nameClass">
+            <a href="#page-top"></a>
+
           </li>
-          <li>
-            <a ng-href="/resume">Resume</a>
+          <li class="page-scroll nameClass">
+            <a href="#about">About</a>
           </li>
-          <li>
-            <a ng-href="/contact">Contact</a>
+          <li class="page-scroll nameClass">
+            <a href="#portfolio">Portfolio</a>
+          </li>
+
+          <li class="page-scroll nameClass">
+            <a href="#resume">Resume</a>
+          </li>
+          <li class="page-scroll nameClass">
+            <a href="#contact">Contact</a>
           </li>
         </ul>
       </div>
-      <!-- /.navbar-collapse -->
+      <!--   /.navbar-collapse -->
     </div>
-    <!-- /.container -->
+    <!--   /.container-fluid -->
   </nav>
 
   <div class="container-fluid">
     <ng-view class='page'></ng-view>
   </div>
 
-
-
-
-
-
-
+  <script src="/js/freelancer.js"></script>
   <script src="/js/module.js"></script>
   <script src="/js/controllers.js"></script>
   <script src="/js/routes.js"></script>
